[gd_scene load_steps=19 format=3 uid="uid://dloba7iyvddk7"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_3xop7"]
[ext_resource type="Texture2D" uid="uid://jk1t5gw785gk" path="res://Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_40oxe"]
[ext_resource type="Texture2D" uid="uid://dhtye6q2g7qn0" path="res://Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_tkgjm"]
[ext_resource type="Texture2D" uid="uid://b2lq6vd3baymj" path="res://Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="3_04a8u"]
[ext_resource type="Texture2D" uid="uid://2gemkvyihgnp" path="res://Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="4_bhmxc"]
[ext_resource type="AudioStream" uid="uid://7t6xnyvpxm0u" path="res://sounds/jump_sfx.wav" id="6_ylulh"]
[ext_resource type="AudioStream" uid="uid://cekqcf0i7ejgl" path="res://sounds/hurt_sfx.wav" id="7_15egf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33maq"]
size = Vector2(11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4aok"]
atlas = ExtResource("2_tkgjm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dghk1"]
atlas = ExtResource("2_tkgjm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2d1y"]
atlas = ExtResource("3_04a8u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojs86"]
atlas = ExtResource("4_bhmxc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg0f2"]
atlas = ExtResource("4_bhmxc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqvft"]
atlas = ExtResource("4_bhmxc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtik0"]
atlas = ExtResource("4_bhmxc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m3ek0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_40oxe")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4aok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dghk1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2d1y")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojs86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg0f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqvft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtik0")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmgmk"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cult"]
size = Vector2(14, 5)

[node name="player" type="CharacterBody2D"]
collision_mask = 86
script = ExtResource("1_3xop7")

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -9)
shape = SubResource("RectangleShape2D_33maq")

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_m3ek0")
animation = &"idle"
autoplay = "idle"

[node name="animaton" type="AnimationPlayer" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_pmgmk")
debug_color = Color(0.976471, 0, 0.407843, 0.419608)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(6, -7)
target_position = Vector2(4, 0)
collision_mask = 4
hit_from_inside = true

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-6, -7)
target_position = Vector2(-4, 0)
collision_mask = 4
hit_from_inside = true

[node name="head_collider" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 0
collision_mask = 64

[node name="head_collision" type="CollisionShape2D" parent="head_collider"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3cult")

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ylulh")
volume_db = -30.0

[node name="hurt_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_15egf")

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="head_collider" to="." method="_on_head_collider_body_entered"]
